Align components correctly

--- a/public/style.css
+++ b/public/style.css
@@ -280,8 +280,8 @@ h1 {
     padding: 1em;
 }
 
-.vote-summary {
-    margin: 1em;
+.voting-components .vote-summary {
+    margin: 0.5em;
     background: #fff;
     color: #000;
     border: 4px solid #5cadc5;
